# projify

./: .gitignore  Makefile  README.md  pyproject.toml
projify/: __init__.py  generator.py  utils.py
projify/template/config/: .gitignore
projify/template/dockerfile/: Dockerfile.poetry
projify/template/makefile/: main.mak  poetry.mak
template/config/: .gitignore
template/dockerfile/: Dockerfile.base  Dockerfile.poetry
template/makefile/: main.mak  poetry.mak
